--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="shortcut icon" href="%sveltekit.assets%/favicons/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>bemoji.dev</title>
 		<script>
 			if (
 				localStorage.theme === 'dark' ||
